Issue 9025: Fixed document search
git-svn-id: https://svn.imcode.com/imcode/imcms/trunk@16162 bd66a97b-2aff-0310-9095-89ca5cabf5a6